# SecureComm-WIP

./: .gitignore  CMakeLists.txt  DEVICE_DEPLOYMENT.md  FEATURES_IMPLEMENTED.md  MVP_TEST_GUIDE.md  README.md  READY_TO_TEST.md  TEST_CHECKLIST.md  package-lock.json
Android/app/src/main/cpp/: SecureCommNative.cpp
Android/app/src/main/java/com/example/secure_carrier/: MainActivity.kt
Android/app/src/main/java/com/example/secure_carrier/net/: ServerDiscovery.kt
Android/app/src/main/java/com/example/secure_carrier/ui/auth/: AuthScreen.kt  AuthViewModel.kt
Android/app/src/main/java/com/example/secure_carrier/ui/chat/: ChatScreen.kt
Android/app/src/main/java/com/example/secure_carrier/ui/settings/: SettingsScreen.kt
android/: ANDROID_STUDIO_SETUP.md  SMS_FALLBACK_IMPLEMENTATION.md  build_and_deploy.sh  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/carrierbridge_android/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_jni_transport.cpp  android_jni_transport.hpp  carrierbridge_jni.cpp  carrierbridge_jni_stub.cpp  jni_dispatcher.cpp  jni_mesh.cpp  jni_queue.cpp  jni_ratchet.cpp  jni_sms.cpp  jni_transport.cpp  native-lib.cpp
android/app/src/main/java/com/example/carrierbridge/jni/: CarrierBridgeClient.kt  CarrierBridgeNative.kt  SmsJniAdapter.kt
android/app/src/main/java/com/example/carrierbridge/transport/: SmsEnvelope.kt  SmsTransport.kt
android/app/src/main/java/com/example/carrierbridge_android/: MainActivity.kt
android/app/src/main/java/com/example/carrierbridge_android/data/: AuthRepository.kt  ContactRepository.kt
android/app/src/main/java/com/example/carrierbridge_android/ui/: ChatScreen.kt
android/app/src/main/java/com/example/carrierbridge_android/ui/auth/: AuthStartScreen.kt  EmailSignupScreen.kt  PhoneSignupScreen.kt
android/app/src/main/java/com/example/carrierbridge_android/ui/contacts/: ContactListScreen.kt
android/app/src/main/java/com/example/carrierbridge_android/ui/navigation/: Navigation.kt
android/app/src/main/java/com/example/carrierbridge_android/ui/settings/: AppSettings.kt  SmsSettings.kt
android/app/src/main/java/com/example/carrierbridge_android/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/carrierbridge_android/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
backend/src/: main.rs
cpp/: CMakeLists.txt
cpp/include/libcarb/: carrierbridge.h
cpp/src/broker/: broker_main.cpp
cpp/src/client/: client_main.cpp
cpp/src/libcarb/: broker.cpp  client.cpp
cpp/tests/: CMakeLists.txt
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  SECURITY.md
examples/go/: main.go
include/libcarb/: carrierbridge.h
libs/rust-crypto/: Cargo.toml
libs/rust-crypto/src/: lib.rs
libs/rust-crypto/tests/: basic.rs
proto/: GENPROTO_README.md  securecomm.proto
scripts/: automate_all.sh  build.sh  download_libsodium.sh  gen-proto.sh  start_server.sh
server/: client.go  go.mod  go.sum  main.go  server.db  server.js
services/relay-go/: go.mod
services/relay-go/cmd/relay/: main.go
services/relay-go/internal/server/: server.go
src/app/: main.cpp
src/broker/: broker_main.cpp
src/carrierbridge/: core.cpp
src/carrierbridge/include/: carrierbridge.h
src/client/: client_main.cpp
src/libcarb/: core.cpp
src/libsecurecomm/include/securecomm/: crypto.hpp  dispatcher.hpp  envelope.hpp  mls_manager.hpp  ratchet.hpp  transport.hpp
src/libsecurecomm/src/: dispatcher.cpp  envelope.cpp  in_memory_transport.cpp  mls_manager.cpp  websocket_transport.cpp
src/libsecurecomm/src/clients/desktop/: main.cpp
src/libsecurecomm/tests/: mls_unit_test.cpp
tests/unit/: test_core.cpp
